Use Service tracker from activator for service registry